--- a/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
+++ b/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup Label="To simplify use of WriteLine">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+  </ItemGroup>
+  
+  <ItemGroup Label="Versions are set at solution-level.">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference 
+      Include="..\Northwind.EntityModels\Northwind.EntityModels.csproj" />
+  </ItemGroup>
+
 </Project>
