Add configuration files for database settings and update .gitignore Add README.md

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 *.userosscache
 *.sln.docstates
 
+# Configuration files with sensitive data
+appsettings.json
+appsettings.*.json
+!appsettings.Example.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
