Northwind.DataContext.csproj.cs: Fix using directive for System.Console

--- a/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
+++ b/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="To simplify use of WriteLine">
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+    <using Include="System.Console" Static="true" />
   </ItemGroup>
   
   <ItemGroup Label="Versions are set at solution-level.">
