Enhance configuration and testing setup for Northwind project
This is an intermediate state. Testfiles work (with test configuration). We need to rework the use of setting files (see configuration-best-practices.md and configuration-refactoring-tasks.md)

- Updated .gitignore to include test settings file.
- Modified markdownlint configuration to allow longer line lengths.
- Added appsettings.Testing.Example.json for test database configuration.
- Updated Directory.Packages.props to include new package references for testing.
- Enhanced NorthwindContext with fallback configuration and improved connection handling.
- Created shared configuration classes for database connection settings.
- Added unit tests for database connection and configuration validation.
- Established a structured test project layout and documentation for best practices.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ appsettings.json
 appsettings.*.json
 !appsettings.Example.json
 
+# Test settings
+**/appsettings.Testing.json
+!**/appsettings.Testing.Example.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
