--- a/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
+++ b/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
@@ -20,6 +20,8 @@
   <ItemGroup>
     <ProjectReference
       Include="..\Northwind.EntityModels\Northwind.EntityModels.csproj" />
+    <ProjectReference
+      Include="..\Northwind.Shared\Northwind.Shared.csproj" />
   </ItemGroup>
 
 </Project>
