--- a/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
+++ b/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>2062e565-9642-455c-9452-6bfad50e5fd5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup Label="To simplify use of WriteLine">
@@ -18,10 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\Northwind.EntityModels\Northwind.EntityModels.csproj" />
-    <ProjectReference
-      Include="..\Northwind.Shared\Northwind.Shared.csproj" />
+    <ProjectReference Include="..\Northwind.EntityModels\Northwind.EntityModels.csproj" />
+    <ProjectReference Include="..\Northwind.Shared\Northwind.Shared.csproj" />
   </ItemGroup>
 
 </Project>
