--- a/code/MatureWeb/appsettings.Example.json
+++ b/code/MatureWeb/appsettings.Example.json
@@ -2,5 +2,12 @@
   "Database": {
     "MY_SQL_USR": "your_username",
     "MY_SQL_PWD": "your_password"
+  },
+  "DatabaseConnection": {
+    "DataSource": "tcp:127.0.0.1,1433",
+    "InitialCatalog": "Northwind",
+    "TrustServerCertificate": true,
+    "MultipleActiveResultSets": true,
+    "ConnectTimeout": 8
   }
 } 
