Add architectural decision rules and enhance configuration management - Intermediat state, a couple of tests requiring the DB fail.
- Introduced a new architectural decision rule document to guide
  developers in consulting users before making architectural changes.
- Updated appsettings.Testing.Example.json to include database
  credentials for testing purposes.
- Added Microsoft.Extensions.Configuration.UserSecrets package
  for secure handling of sensitive data in development.
- Enhanced NorthwindContext and related classes to support
  environment-specific configuration and user secrets.
- Created comprehensive unit tests for configuration loading
  and error handling.
- Updated documentation to reflect new testing strategies and
  configuration approaches.

--- a/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
+++ b/code/MatureWeb/Northwind.DataContext/Northwind.DataContext.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
   </ItemGroup>
 
   <ItemGroup>
