Refactor test infrastructure and enhance database testing
- Added `Microsoft.EntityFrameworkCore.InMemory` package for in-memory testing.
- Introduced `InMemoryConfigurationTests` and `InMemoryTestBase` for isolated database tests.
- Updated `DatabaseTestBase` to streamline database context creation.
- Refactored existing tests to use `CreateDatabaseContext()` and `CreateInMemoryContext()`.
- Enhanced error reporting in database connection tests for better diagnostics.
- Removed outdated configuration tests and improved documentation on test structure and naming conventions.
- Updated `Directory.Packages.props` to include new package references for testing.

--- a/code/MatureWeb/Directory.Packages.props
+++ b/code/MatureWeb/Directory.Packages.props
@@ -4,6 +4,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup Label="For EF Core.">
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3" />
