Add SQLite database file patterns to .gitignore
- Included patterns for SQLite database files (*.db, *.sqlite, *.sqlite3)
  to prevent them from being tracked in version control.
- This update helps maintain a cleaner repository by ignoring
  unnecessary database files.

--- a/.gitignore
+++ b/.gitignore
@@ -275,6 +275,11 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+# SQLite database files
+*.db
+*.sqlite
+*.sqlite3
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
