--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 appsettings.json
 appsettings.*.json
 !appsettings.Example.json
+!appsettings.Development.Example.json
 
 # Test settings
 **/appsettings.Testing.json
