Add SQLite database auxiliary files to .gitignore
- Included patterns for SQLite auxiliary files (*.db-shm, *.db-wal)
  to prevent them from being tracked in version control.
- This update maintains a cleaner repository by ignoring
  unnecessary auxiliary files related to SQLite databases.

--- a/.gitignore
+++ b/.gitignore
@@ -281,6 +281,10 @@ ServiceFabricBackup/
 *.sqlite
 *.sqlite3
 
+# SQLite database auxiliary files
+*.db-shm
+*.db-wal
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
