Add database configuration and update project dependencies chapter 2
- Introduced database settings in appsettings.Example.json for MySQL
  user credentials and connection details.
- Added necessary package references for configuration in the
  Northwind.Mvc.csproj file to support the new database setup.
- Updated Program.cs with additional namespace imports for
  database connectivity, enhancing code organization and clarity.

--- a/code/MatureWeb/Northwind.Mvc/Northwind.Mvc.csproj
+++ b/code/MatureWeb/Northwind.Mvc/Northwind.Mvc.csproj
@@ -21,6 +21,16 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
+    
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Northwind.DataContext\Northwind.DataContext.csproj" />
+    <ProjectReference Include="..\Northwind.Shared\Northwind.Shared.csproj" />
   </ItemGroup>
 
 </Project>
