--- a/code/MatureWeb/Northwind.Mvc/appsettings.Example.json
+++ b/code/MatureWeb/Northwind.Mvc/appsettings.Example.json
@@ -1,4 +1,15 @@
 {
+  "Database": {
+    "MY_SQL_USR": "placeholder",
+    "MY_SQL_PWD": "placeholder"
+  },
+  "DatabaseConnection": {
+    "DataSource": "tcp:127.0.0.1,1433",
+    "InitialCatalog": "Northwind",
+    "TrustServerCertificate": true,
+    "MultipleActiveResultSets": true,
+    "ConnectTimeout": 3
+  },
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
