Update .gitignore to include example appsettings files
- Added exceptions for appsettings.*.Example.json to allow
  tracking of example configuration files while ignoring
  sensitive data files.
- Ensured clarity in the .gitignore rules for better
  management of configuration files.

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 # Configuration files with sensitive data
 appsettings.json
 appsettings.*.json
+!appsettings.*.Example.json
 !appsettings.Example.json
-!appsettings.Development.Example.json
 
 # Test settings
 **/appsettings.Testing.json
