--- a/code/MatureWeb/Northwind.Mvc/Northwind.Mvc.csproj
+++ b/code/MatureWeb/Northwind.Mvc/Northwind.Mvc.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MatureWeb.ServiceDefaults\MatureWeb.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Northwind.DataContext\Northwind.DataContext.csproj" />
     <ProjectReference Include="..\Northwind.Shared\Northwind.Shared.csproj" />
   </ItemGroup>
