--- a/code/MatureWeb/Directory.Packages.props
+++ b/code/MatureWeb/Directory.Packages.props
@@ -1,55 +1,59 @@
 <Project>
-  <!--Last updated package versions: March 14, 2025.-->
+  <!--Last updated package versions: 4/30/2025.
+  Oriented on https://github.com/markjprice/web-dev-net9/commit/0ea0cd823df02b7ebd732e6b896b7664049a9870
+  -->
+
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <!-- Core .NET 9 package versions -->
-    <EFCoreVersion>9.0.4</EFCoreVersion>
-    <AspNetCoreVersion>9.0.4</AspNetCoreVersion>
-    <MsExtensionsVersion>9.0.4</MsExtensionsVersion>
+    <MicrosoftPackageVersion>9.0.4</MicrosoftPackageVersion>
+    <EFCoreVersion>$(MicrosoftPackageVersion)</EFCoreVersion>
+    <AspNetCoreVersion>$(MicrosoftPackageVersion)</AspNetCoreVersion>
+    <MsExtensionsVersion>$(MicrosoftPackageVersion)</MsExtensionsVersion>
     <MsExtConfigVersion>$(MsExtensionsVersion)</MsExtConfigVersion>
     
     <!-- Aspire -->
     <AspireVersion>9.1.0</AspireVersion>
     
     <!-- Telemetry -->
-    <OpenTelemetryVersion>1.11.2</OpenTelemetryVersion>
+    <OpenTelemetryVersion>1.11.1</OpenTelemetryVersion>
   </PropertyGroup>
 
   <ItemGroup Label="For EF Core.">
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="$(EFCoreVersion)" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EFCoreVersion)" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="$(EFCoreVersion)" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="$(EFCoreVersion)" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="$(EFCoreVersion)" />
+  </ItemGroup>
+
+  <ItemGroup Label="For EF Core. Not mentioned by Price">
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="$(EFCoreVersion)" />
     <PackageVersion Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageVersion Include="Xunit.SkippableFact" Version="1.5.23" />
   </ItemGroup>
+
   <ItemGroup Label="For testing.">
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
-    <PackageVersion Include="Microsoft.Playwright" Version="1.50.0" />
+    <PackageVersion Include="Microsoft.Playwright" Version="1.51.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="$(AspNetCoreVersion)" />
   </ItemGroup>
-  <ItemGroup Label="For configuration.">
-    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="$(MsExtConfigVersion)" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="$(MsExtConfigVersion)" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="$(MsExtConfigVersion)" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.FileExtensions" Version="$(MsExtConfigVersion)" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="$(MsExtConfigVersion)" />
-  </ItemGroup>
+
   <ItemGroup Label="For ASP.NET Core websites.">
     <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="$(AspNetCoreVersion)" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="$(AspNetCoreVersion)" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.UI" Version="$(AspNetCoreVersion)" />
   </ItemGroup>
+
   <ItemGroup Label="For deployment.">
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
   </ItemGroup>
+
   <ItemGroup Label="For .NET Aspire.">
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="$(AspireVersion)" />
-    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="$(MsExtensionsVersion)" />
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="$(AspireVersion)" />
     <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="$(OpenTelemetryVersion)" />
     <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="$(OpenTelemetryVersion)" />
@@ -57,20 +61,32 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="$(OpenTelemetryVersion)" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="$(OpenTelemetryVersion)" />
   </ItemGroup>
+
   <ItemGroup Label="For caching.">
     <PackageVersion Include="Microsoft.Extensions.Caching.Hybrid" Version="$(MsExtensionsVersion)" />
   </ItemGroup>
+
   <ItemGroup Label="For ASP.NET Core web services.">
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="$(AspNetCoreVersion)" />
-    <PackageVersion Include="NSwag.MSBuild" Version="14.2.0" />
+    <PackageVersion Include="NSwag.MSBuild" Version="14.3.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="$(AspNetCoreVersion)" />
     <PackageVersion Include="Microsoft.AspNetCore.OData" Version="9.2.1" />
   </ItemGroup>
+
   <ItemGroup Label="For FastEndpoints web services.">
     <PackageVersion Include="FastEndpoints" Version="5.35.0" />
   </ItemGroup>
+
   <ItemGroup Label="For Umbraco CMS.">
-    <PackageVersion Include="Umbraco.Cms" Version="14.3.3" />
+    <PackageVersion Include="Umbraco.Cms" Version="14.3.4" />
     <PackageVersion Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.3" />
+  </ItemGroup>
+
+  <ItemGroup Label="For configuration.">
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="$(MsExtConfigVersion)" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="$(MsExtConfigVersion)" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="$(MsExtConfigVersion)" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.FileExtensions" Version="$(MsExtConfigVersion)" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="$(MsExtConfigVersion)" />
   </ItemGroup>
 </Project>
